basetransform: Passthrough ALLOCATION queries in passthrough mode even if we had no caps yet

Or if the element does not care about caps at all.

Also remove an assigned but unused local variable.

https://bugzilla.gnome.org/show_bug.cgi?id=710268